tests/bind/good/continue-in-while2.py
while 1:
    while 1:
        while 1:
            continue
        continue
    continue
