tests/bind/bad/continue-out-while.py
while 1:
    0
continue
